# myrobot

myrobot_base/: CMakeLists.txt  package.xml
myrobot_base/config/: control.yaml
myrobot_base/include/myrobot_base/: myrobot_hardware_interface.h
myrobot_base/launch/: startup.launch
myrobot_base/src/: myrobot_hardware_interface.cpp
myrobot_control/: CMakeLists.txt  package.xml
myrobot_control/config/: control.yaml
myrobot_control/launch/: control.launch  spawn.launch
myrobot_custom_nav/: CMakeLists.txt  package.xml
myrobot_custom_nav/launch/: dumspter_nav.launch  dumspter_world.launch
myrobot_custom_nav/src/: send_goal.cpp
myrobot_custom_nav/srv/: Yuk.srv
myrobot_description/: CMakeLists.txt  package.xml
myrobot_description/gazebo/: myrobot_world.world  opencv.world
myrobot_description/launch/: gazebo.launch  opencv_world.launch  rviz.launch
myrobot_description/meshes/: elevator_1.stl
myrobot_description/rviz/: amcl.rviz  mapping.rviz  rviz.rviz
myrobot_description/urdf/: camera.urdf.xacro  caster_wheel.urdf.xacro  laser_scanner.urdf.xacro  myrobot.urdf.xacro  robot.gazebo  robot.gazebo.xml  wheel.urdf.xacro
myrobot_description/urdf/caster_wheel/: caster_wheel.urdf.xacro
myrobot_msgs/: CMakeLists.txt  package.xml
myrobot_msgs/srv/: Yuk.srv
myrobot_navigation/: CMakeLists.txt  package.xml
myrobot_navigation/config/: amcl.yaml  global_costmap.yaml  global_planner.yaml  gmapping.yaml  local_costmap.yaml  local_planner.yaml
myrobot_navigation/launch/: amcl.launch  gmapping.launch  gmapping_rviz.launch  move_base.launch
myrobot_navigation/maps/: mymap.yaml
myrobot_pcl/: CMakeLists.txt  package.xml
myrobot_pcl/scripts/: o3d.py
myrobot_pcl/src/: pcl_covariance.cpp  pcl_inertia.bk  pcl_narf.cpp  pcl_nodelet.cpp  pcl_normals.cpp  pcl_normalsmooth.cpp  pcl_ros_stream.cpp  pcl_test.cpp  pcl_transform.cpp
myrobot_vision/: CMakeLists.txt  Readme.asciidoc  package.xml
myrobot_vision/src/: cv_bilateralblur.cpp  cv_binwheels1.cpp  cv_binwheels2.cpp  cv_binwheels3.cpp  cv_binwheels4.cpp  cv_blend.cpp  cv_blobDetector.cpp  cv_brightness.cpp  cv_canny_edge.cpp  cv_contrast.cpp  cv_crop.cpp  cv_dilating.cpp  cv_drawatom.cpp  cv_eroding.cpp  cv_findCircles.cpp  cv_gaussianblur.cpp  cv_hitormiss.cpp  cv_homework10.cpp  cv_homework5.cpp  cv_inRange.cpp  cv_line_detection.cpp  cv_lines.cpp  cv_lookuptable.cpp  cv_minimum.cpp  cv_morphology.cpp  cv_object_detection.cpp  cv_object_measure.cpp  cv_pyramids.cpp  cv_save_images.cpp  cv_template_match.cpp  cv_test.cpp  cv_threshold.cpp
myrobot_vision/src/approach_bin/: CMakeLists.txt  CustomCircle.cpp  CustomCircle.h  FindCircles.cpp  FindCircles.h  PointMeasure.cpp  PointMeasure.h  Readme.asciidoc  cv_approach_bin.cpp  cv_approach_bin.h  main.cpp
myrobot_vision/src/opencv_examples/: CMakeLists.txt  cv_bin_lines.cpp  cv_binwheels3.cpp  cv_binwheels4.cpp  cv_blend.cpp  cv_blobDetector.cpp  cv_blur.cpp  cv_brightness.cpp  cv_bw.cpp  cv_contrast.cpp  cv_crop.cpp  cv_dilating.cpp  cv_eroding.cpp  cv_findCircles.cpp  cv_homework10.cpp  cv_line_detection.cpp  cv_lines.cpp  cv_medianblur.cpp  cv_morphology.cpp  cv_object_detection.cpp  cv_object_measure.cpp  cv_pgm_crop.cpp  cv_sharpen.cpp  cv_test.cpp  cv_text.cpp  cv_threshold.cpp
myrobot_vision/src/opencv_road/: CMakeLists.txt  MyLine.cpp  MyLine.h  opencv_road.cpp  opencv_road_2.cpp
myrobot_vision/src/power_station/: CMakeLists.txt  Docking.cpp  Docking.h  Line.cpp  Line.h  PointMeasure.cpp  PointMeasure.h  power_station.cpp
myrobot_vision/src/qr_barcode/: CMakeLists.txt  qr_code.cpp
